# Baysian-Salary-Prediction

./: .gitignore  README.md  bn_core.py  fairness_metrics.py  pyproject.toml  requirements.txt  salary_model.py
docs/: fairness_analysis.md
scripts/: run_evaluation.py
src/salary_prediction/: __init__.py  __main__.py  bn_core.py  fairness.py  inference.py  model.py
tests/: __init__.py
