[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-prediction"
version = "0.1.0"
description = "Bayesian inference system for income prediction and AI fairness analysis on the UCI Adult dataset"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = []
keywords = ["bayesian-inference", "fairness", "machine-learning", "naive-bayes", "variable-elimination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/yourusername/baysian-salary-prediction"
Documentation = "https://github.com/yourusername/baysian-salary-prediction#readme"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
